--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "chalk": "^4.1.1",
+    "dotenv": "^9.0.2",
     "geolib": "^3.3.1",
     "mongodb": "^3.6.6",
     "node-schedule": "^2.0.0",
-    "pino": "^6.11.3"
+    "pino": "^6.11.3",
+    "pino-pretty": "^4.8.0"
   },
   "devDependencies": {
     "eslint": "^7.26.0",
