--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "chalk": "^4.1.1",
+    "date-fns": "^2.21.3",
     "dotenv": "^9.0.2",
     "geolib": "^3.3.1",
+    "moment": "^2.29.1",
     "mongodb": "^3.6.6",
     "node-schedule": "^2.0.0",
     "pino": "^6.11.3",
