--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "debug": "nodemon --inspect index"
   },
   "keywords": [
     "monica",
@@ -16,12 +17,12 @@
   "author": "Eng. Sergio Ferlito",
   "license": "MIT",
   "dependencies": {
-    "@stdlib/stdlib": "0.0.94",
     "bcrypt": "^5.0.1",
     "chalk": "^4.1.1",
     "date-fns": "^2.22.1",
     "dotenv": "^9.0.2",
     "geolib": "^3.3.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "mongodb": "^3.6.9",
     "node-schedule": "^2.0.0",
